Realizadas las slides iniciales cambiando las transiciones. Clase -El componente Slide-

--- a/platzi-music/src/app/home/home.page.html
+++ b/platzi-music/src/app/home/home.page.html
@@ -1,20 +1,32 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content padding>
+  <ion-slides pager="true" [options]="slideOpt">
+    <ion-slide>
+      <ion-icon name="close"></ion-icon>
+      <img src="assets/img/logo.png" alt="Platzi Music Logo" />
+      <h1>Escucha tu musica</h1>
+      <h2>EN CUALQUIER LUGAR</h2>
+      <p>
+        Los mejores abumes, las mejores canciones. Escucha y comparte en cualquier momento, a todas horas
+      </p>
+      <ion-icon name="play"></ion-icon>
+    </ion-slide>
+    <ion-slide>
+      <img src="assets/img/logo.png" alt="Platzi Music Logo" />
+      <h1>Disfruta de nuestro reproductor</h1>
+      <h2>DE VIDEOS INCREIBLES</h2>
+      <p>
+        Entra al modo video de nuestro reproducor y obten....
+      </p>
+      <ion-icon name="play"></ion-icon>
+    </ion-slide>
+    <ion-slide>
+      <img src="assets/img/logo.png" alt="Platzi Music Logo" />
+      <h1>Accede al exclusivo</h1>
+      <h2>MODO DEPORTE</h2>
+      <p>
+        Crea una playlist basada en tu actividad fisica. Ten reportes y acceso a lo que necesites, integrado con GPS
+      </p>
+      <ion-icon name="play"></ion-icon>
+    </ion-slide>
+  </ion-slides>
 </ion-content>
