Leve cambio, no afecta a frontend ni backend

--- a/platzi-music/src/app/home/home.page.html
+++ b/platzi-music/src/app/home/home.page.html
@@ -6,7 +6,7 @@
       <h1>Escucha tu musica</h1>
       <h2>EN CUALQUIER LUGAR</h2>
       <p>
-        Los mejores abumes, las mejores canciones. Escucha y comparte en cualquier momento, a todas horas
+        Los mejores albumes, las mejores canciones. Escucha y comparte en cualquier momento, a todas horas
       </p>
       <ion-icon name="play"></ion-icon>
     </ion-slide>
