--- a/platzi-music/src/app/home/home.page.html
+++ b/platzi-music/src/app/home/home.page.html
@@ -1,32 +1,3 @@
-<ion-content padding>
-  <ion-slides pager="true" [options]="slideOpt">
-    <ion-slide>
-      <ion-icon name="close"></ion-icon>
-      <img src="assets/img/logo.png" alt="Platzi Music Logo" />
-      <h1>Escucha tu musica</h1>
-      <h2>EN CUALQUIER LUGAR</h2>
-      <p>
-        Los mejores albumes, las mejores canciones. Escucha y comparte en cualquier momento, a todas horas
-      </p>
-      <ion-icon name="play"></ion-icon>
-    </ion-slide>
-    <ion-slide>
-      <img src="assets/img/logo.png" alt="Platzi Music Logo" />
-      <h1>Disfruta de nuestro reproductor</h1>
-      <h2>DE VIDEOS INCREIBLES</h2>
-      <p>
-        Entra al modo video de nuestro reproducor y obten....
-      </p>
-      <ion-icon name="play"></ion-icon>
-    </ion-slide>
-    <ion-slide>
-      <img src="assets/img/logo.png" alt="Platzi Music Logo" />
-      <h1>Accede al exclusivo</h1>
-      <h2>MODO DEPORTE</h2>
-      <p>
-        Crea una playlist basada en tu actividad fisica. Ten reportes y acceso a lo que necesites, integrado con GPS
-      </p>
-      <ion-icon name="play"></ion-icon>
-    </ion-slide>
-  </ion-slides>
+<ion-content>
+  <h1>Este es el home y esta vacio</h1>
 </ion-content>
