--- a/platzi-music/src/app/login/login.page.html
+++ b/platzi-music/src/app/login/login.page.html
@@ -9,7 +9,7 @@
     </ion-item>
     <div class="validation-error">
       <ng-container *ngFor="let validation of validation_message.email">
-        <div *ngIf="(loginForm.get('email').hasError(validation.type) && loginForm.get('email').dirty) || loginForm.get('email').touched">
+        <div *ngIf="loginForm.get('email').hasError(validation.type) && (loginForm.get('email').dirty || loginForm.get('email').touched)">
           {{ validation.message }}
         </div>
       </ng-container>
@@ -20,10 +20,19 @@
     </ion-item>
     <div class="validation-error">
       <ng-container *ngFor="let validation of validation_message.password">
-        <div *ngIf="(loginForm.get('password').hasError(validation.type) && loginForm.get('password').dirty) || loginForm.get('password').touched">
+        <div *ngIf="loginForm.get('password').hasError(validation.type) && (loginForm.get('password').dirty || loginForm.get('password').touched)">
           {{ validation.message }}
         </div>
       </ng-container>
     </div>
+    <ion-button expand="full" shape="round" color="success" 
+    [disabled]="!loginForm.valid" type="submit">
+      Login
+    </ion-button>
   </form>
 </ion-content>
+<ion-footer class="ion-text-center">
+  <ion-button expand="full" shape="round" fill="outline" color="success">
+    Click para registrar
+  </ion-button>
+</ion-footer>
