--- a/platzi-music/src/app/login/login.page.html
+++ b/platzi-music/src/app/login/login.page.html
@@ -25,6 +25,7 @@
         </div>
       </ng-container>
     </div>
+    {{ errorMessage }}
     <ion-button expand="full" shape="round" color="success" 
     [disabled]="!loginForm.valid" type="submit">
       Login
