--- a/platzi-music/src/app/login/login.page.html
+++ b/platzi-music/src/app/login/login.page.html
@@ -33,7 +33,7 @@
   </form>
 </ion-content>
 <ion-footer class="ion-text-center">
-  <ion-button expand="full" shape="round" fill="outline" color="success">
+  <ion-button (click)="goToRegister()" expand="full" shape="round" fill="outline" color="success">
     Click para registrar
   </ion-button>
 </ion-footer>
