--- a/platzi-music/src/app/home/home.page.html
+++ b/platzi-music/src/app/home/home.page.html
@@ -1,3 +1,10 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
   <h1>Este es el home y esta vacio</h1>
 </ion-content>
