--- a/platzi-music/src/app/menu/menu.page.html
+++ b/platzi-music/src/app/menu/menu.page.html
@@ -4,8 +4,8 @@
       <ion-toolbar>
         <ion-title>Menu</ion-title>
         <ion-buttons>
-          <ion-button icon-only (click)="closeMenu()">
-            <ion-icon name="arrow-back-outline" size="large"></ion-icon>
+          <ion-button (click)="closeMenu()">
+            <ion-icon name="arrow-forward-outline" size="large"></ion-icon>
           </ion-button>
         </ion-buttons>
       </ion-toolbar>
@@ -14,6 +14,10 @@
       <ion-list>
         <ion-item>Home</ion-item>
         <ion-item>Settings</ion-item>
+        <ion-item (click)="logout()">
+          <ion-icon name="log-out" color="primary" slot="start"></ion-icon>
+          Salir
+          </ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
