--- a/platzi-music/src/app/home/home.page.html
+++ b/platzi-music/src/app/home/home.page.html
@@ -6,5 +6,31 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <h1>Este es el home y esta vacio</h1>
+  <h1>Artistas</h1>
+  <ion-slides [options]="slideOps" *ngIf="artists.length">
+    <ion-slide *ngFor="let artist of artists">
+      <ion-avatar>
+        <img src="https://via.placeholder.com/150"/>
+        <span>Nombre del artista</span>
+      </ion-avatar>
+    </ion-slide>
+  </ion-slides>
+  <h1>Artistas</h1>
+  <ion-slides [options]="slideOps" *ngIf="artists.length">
+    <ion-slide *ngFor="let artist of artists">
+      <ion-avatar>
+        <img src="https://via.placeholder.com/150"/>
+        <span>Nombre del artista</span>
+      </ion-avatar>
+    </ion-slide>
+  </ion-slides>
+  <h1>Artistas</h1>
+  <ion-slides [options]="slideOps" *ngIf="artists.length">
+    <ion-slide *ngFor="let artist of artists">
+      <ion-avatar>
+        <img src="https://via.placeholder.com/150"/>
+        <span>Nombre del artista</span>
+      </ion-avatar>
+    </ion-slide>
+  </ion-slides>
 </ion-content>
