--- a/platzi-music/src/app/menu/menu.page.html
+++ b/platzi-music/src/app/menu/menu.page.html
@@ -13,6 +13,7 @@
     <ion-content>
       <ion-list>
         <ion-item>Home</ion-item>
+        <ion-item>Sports</ion-item>
         <ion-item>Settings</ion-item>
         <ion-item (click)="logout()">
           <ion-icon name="log-out" color="primary" slot="start"></ion-icon>
